@@ -273,3 +273,5 @@
 	* Added sqltorture(1) in 'tests/'.
 2017-06-05 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.9.13.
+2017-06-29 Fred Gleason <fredg@paravelsystems.com>
+	* Added more specific descriptions for rsync(1) error states.
